add service and pod metric api
